unpackaged/main/default/objects/Etech_API_Setting__c/Etech_API_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Etech API Setting</label>
</CustomObject>