unpackaged/main/default/objects/Etech_API_Setting__c/fields/API_URL_Prod__c.field-meta.xml
<CustomField>
    <fullName>API_URL_Prod__c</fullName>
    <label>API URL (Prod)</label>
    <type>Url</type>
</CustomField>