unpackaged/main/default/objects/Etech_API_Setting__c/fields/API_URL_Staging__c.field-meta.xml
<CustomField>
    <fullName>API_URL_Staging__c</fullName>
    <label>API URL (Staging)</label>
    <type>Url</type>
</CustomField>