unpackaged/main/default/objects/Etech_API_Setting__c/fields/Debugging__c.field-meta.xml
<CustomField>
    <fullName>Debugging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debugging?</label>
    <type>Checkbox</type>
</CustomField>