unpackaged/main/default/objects/Etech_API_Setting__c/fields/Test_mode__c.field-meta.xml
<CustomField>
    <fullName>Test_mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable to send test to staging API endpoint</description>
    <inlineHelpText>Enable to send test to staging API endpoint</inlineHelpText>
    <label>Test mode?</label>
    <type>Checkbox</type>
</CustomField>